--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ flutter:
 
   assets:
     - assets/images/photo.png
+    - assets/images/close.png
+    - assets/images/exit.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
