--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ flutter:
     - assets/images/photo.png
     - assets/images/close.png
     - assets/images/exit.png
+    - assets/images/percent.png
+    - assets/images/sber.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
